deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-manifestos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-manifestos-api
  template:
    metadata:
      labels:
        app: mlops-manifestos-api
    spec:
      containers:
        - name: mlops-manifestos-api
          image: nysarakpy/mlops-manifestos-api:v0.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
