deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-manifestos-api-service
spec:
  selector:
    app: mlops-manifestos-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
